[package]
name = "larvae"
version = "0.1.0"
edition = "2021"
description = "a super fast scientific calculator with dimensional analysis support"
repository = "https://gitlab.com/j-mcavoy/larvae"
license = "GPL-2.0-or-later WITH Bison-exception-2.2"

[dependencies]
regex = "1.5.4"
nom = "7.1.0"
pom = "3.2.0"
meval = "0.2.0"
earlgrey = "0.3.0"
lexers = "0.1.3"
shunting = "0.0.9"
rustyline = "5.0.0"
lazy_static = "1.4.0"
larvae_macros= { version = "*", path= "./larvae_macros"}
float-pretty-print = "0.1.1"
