[package]
name = "larvae_cli"
version = "0.1.0"
edition = "2021"
description = "a super fast scientific calculator with dimensional analysis support"
repository = "https://gitlab.com/j-mcavoy/larvae"
license = "GPL-2.0-or-later WITH Bison-exception-2.2"

[[bin]]
name = "larvae"
path = "src/main.rs"

[dependencies]
larvae_core= { version = "*", path= "./crates/larvae_core"}
rustyline = "5.0.0"
log = { version="0.4.16", features = ["release_max_level_off"] }
env_logger = "0.9.0"
