[package]
name = "larvae_macros"
version = "0.1.0"
edition = "2021"
description = "Provides macros for larvae core"
homepage = "https://gitlab.com/j-mcavoy/larvae"
repository = "https://gitlab.com/j-mcavoy/larvae"
license = "GPL-3.0-or-later"
keywords= [ "calculator", "dimensional analysis", "larvae", "science", "units"]

[lib]
proc-macro = true

[dependencies]
convert_case = "0.4.0"
lazy_static = "1.4.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
